crates/soil-test/tests/api/ui/invalid_api_version_4.stderr
error: Unexpected `api_version` attribute. The supported format is `api_version(1)`
  --> tests/api/ui/invalid_api_version_4.rs:20:3
   |
20 |         #[api_version("1")]
   |         ^
